# project4---sentinel_ai_scraper

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  requirements-dev.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-build.yml
deployment/huggingface-space/: Dockerfile  README.md  app.py  demo_recovery_engine.py  entrypoint.sh  recovery_worker_process.py  requirements.txt  seed_demo_data.py
docs/adr/: 0001-deterministic-first-architecture.md  0002-microservices-boundaries.md  0003-hybrid-sync-async-execution.md  0004-redis-as-lightweight-queue.md  0005-monorepo-with-shared-kernel.md  0006-shared-postgresql-database.md  0007-cache-aside-selector-storage.md  0008-sqlite-test-substitute.md  0009-no-authentication-mvp.md  0010-base64-screenshot-transfer.md  0011-single-langgraph-agent.md  0012-seed-based-mock-reproducibility.md  0013-pip-over-uv-workspace.md  0014-redis-streams-migration.md  template.md  (+3 more)
infra/: .env.example  docker-compose.yml  prometheus.yml
libs/sentinel_shared/: pyproject.toml  requirements.txt
libs/sentinel_shared/src/sentinel_shared/domain/: extraction_validator.py  job.py  value_objects.py
libs/sentinel_shared/src/sentinel_shared/enums/: __init__.py  failure_reason.py  job_status.py
libs/sentinel_shared/src/sentinel_shared/observability/: metrics.py  tracing.py
libs/sentinel_shared/tests/: test_metrics.py  test_tracing.py
(+101 files in other folders)
