[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-shared"
version = "0.1.0"
description = "Shared domain kernel for SentinelAI Scraper microservices (contracts only, no service-specific logic - see ADR-0005)"
requires-python = ">=3.12"
dependencies = [
    "prometheus-client>=0.20,<1.0",
    "opentelemetry-api>=1.27,<2.0",
    "opentelemetry-sdk>=1.27,<2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
